custom mapper by PersonsModel::data(const QModelIndex &index, int role) const

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -16,10 +16,17 @@
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <widget class="QLineEdit" name="lineEdit"/>
+     <layout class="QVBoxLayout" name="pwLayout"/>
     </item>
     <item>
-     <widget class="QLineEdit" name="lineEdit_2"/>
+     <layout class="QHBoxLayout" name="horizontalLayout_5">
+      <item>
+       <widget class="QLineEdit" name="lineEdit"/>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="lineEdit_2"/>
+      </item>
+     </layout>
     </item>
     <item>
      <layout class="QVBoxLayout" name="verticalLayout_2">
